优化项目父子依赖管理